# FuzzyRat

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  asan.sh  report_cov.sh
example/: alt.txt  any.txt  arithmetic.txt  charset.txt  charset1.txt  charset2.txt  ex.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  fuzzyrat.txt  one.txt  opt.txt  regex.txt  str.txt  zero.txt
include/: fuzzyrat.h
src/: compile.cpp  compile.h  error.cpp  error.h  eval.hpp  fuzzyrat.cpp  lexer.h  lexer.re2c.cpp  logger.cpp  logger.h  main.cpp  node.cpp  node.h  opcode.cpp  opcode.h  parser.cpp  parser.h  state.h  verify.cpp  verify.h
test/: CMakeLists.txt  test_common.hpp
test/base/: CMakeLists.txt  base_test.cpp
test/logger/: CMakeLists.txt  logger_test.cpp
test/parser/: CMakeLists.txt  parser_test.cpp
